# git-tide

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint  README.md  auto-merge.sh  auto-tag.sh  ci-common.sh  demo.ps1  demo.sh  make-release.sh  mkdocs.yml  nox-tasks-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  reset.sh
docs/: contributing.md
projectA/: pyproject.toml
projectB/: pyproject.toml
src/: feat1.txt  monoflow.py
src/monoflow/: __main__.py  core.py  gitutils.py
src/tide/: cli.py  core.py  gitutils.py
tests/: conftest.py  test_scenarios.py  test_smoke.py  test_unit.py
