[project]
name = "git-tide"
version = "0.1.13"
description = "CLI for automated gitflow-style branching"
authors = [
    {name="Chad Dombrova"},
    {name="Matt Collie"},
]
readme = "README.md"
dependencies = [
    "commitizen ==3.16.0",
    "tomli >=2.0.1 ; python_version <'3.11'",
    "click ==8.1.7",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/chadrik/git-tide"

[project.optional-dependencies]
init = [
    "python-gitlab ==4.8.0",
]

[project.scripts]
tide = "tide.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tide"]

[tool.hatch.envs.default]
installer = "uv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
files = ["noxfile.py", "src"]
ignore_missing_imports = true
show_error_codes = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
markers = [
    "smoke: mark a test as a smoke test",
    "unit: mark a test as a unit test"
]

[tool.tide]
tag_format = "$version"
branches.beta = "develop"
branches.rc = "staging"
branches.stable = "master"
